// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transpiler parse a:for 1`] = `
Object {
  "alias": "item",
  "attrsList": Array [],
  "attrsMap": Object {
    "a:for": "todos",
  },
  "children": Array [],
  "for": "todos",
  "iterator1": "index",
  "parent": undefined,
  "plain": false,
  "tag": "view",
  "type": 1,
}
`;

exports[`Transpiler parse bind props 1`] = `
Object {
  "attrs": Array [
    Object {
      "name": "foo",
      "scope": "",
      "value": "(\\"bar \\") + (data['someVal']) + (\\" \\") + (data['otherVal'])",
    },
  ],
  "attrsList": Array [],
  "attrsMap": Object {
    "foo": "bar {{someVal}} {{otherVal}}",
  },
  "children": Array [
    Object {
      "attrsList": Array [],
      "attrsMap": Object {},
      "children": Array [
        Object {
          "text": "hello",
          "type": 3,
        },
      ],
      "parent": [Circular],
      "plain": true,
      "tag": "text",
      "type": 1,
    },
    Object {
      "attrsList": Array [],
      "attrsMap": Object {},
      "children": Array [
        Object {
          "text": "world",
          "type": 3,
        },
      ],
      "parent": [Circular],
      "plain": true,
      "tag": "text",
      "type": 1,
    },
  ],
  "parent": undefined,
  "plain": false,
  "tag": "view",
  "type": 1,
}
`;

exports[`Transpiler parse nested 1`] = `
Object {
  "attrs": Array [
    Object {
      "name": "foo",
      "value": "\\"bar\\"",
    },
  ],
  "attrsList": Array [
    Object {
      "name": "foo",
      "value": "bar",
    },
  ],
  "attrsMap": Object {
    "foo": "bar",
  },
  "children": Array [
    Object {
      "attrsList": Array [],
      "attrsMap": Object {},
      "children": Array [
        Object {
          "text": "hello",
          "type": 3,
        },
      ],
      "parent": [Circular],
      "plain": true,
      "tag": "text",
      "type": 1,
    },
    Object {
      "attrsList": Array [],
      "attrsMap": Object {},
      "children": Array [
        Object {
          "text": "world",
          "type": 3,
        },
      ],
      "parent": [Circular],
      "plain": true,
      "tag": "text",
      "type": 1,
    },
  ],
  "parent": undefined,
  "plain": false,
  "tag": "view",
  "type": 1,
}
`;

exports[`Transpiler parse should use a:for with other rules 1`] = `
Object {
  "alias": "item",
  "attrs": Array [
    Object {
      "name": "checked",
      "scope": "this.data",
      "value": "(item.checked)",
    },
  ],
  "attrsList": Array [],
  "attrsMap": Object {
    "a:for": "todos",
    "a:key": "{{item.id}}",
    "checked": "{{item.checked}}",
  },
  "children": Array [],
  "for": "todos",
  "iterator1": "index",
  "key": "(item.id)",
  "parent": undefined,
  "plain": false,
  "tag": "view",
  "type": 1,
}
`;
